using helpfull Enrolment static methods for counting