@@ -27,7 +27,6 @@ import net.sourceforge.fenixedu.domain.ExecutionDegree;
 import net.sourceforge.fenixedu.domain.ExecutionPeriod;
 import net.sourceforge.fenixedu.domain.Shift;
 import net.sourceforge.fenixedu.domain.ShiftType;
-import net.sourceforge.fenixedu.domain.curriculum.EnrollmentState;
 import net.sourceforge.fenixedu.persistenceTier.ExcepcaoPersistencia;
 import net.sourceforge.fenixedu.util.NumberUtils;
 
@@ -86,46 +85,17 @@ public class SearchExecutionCourses extends Service {
                     while (iter.hasNext()) {
                         CurricularCourse curricularCourse = (CurricularCourse) iter.next();
 
-                        List<Enrolment> enrolled = curricularCourse.getEnrolmentsByExecutionPeriod(executionPeriod);
-                        if (enrolled != null) {
-                            enrolledInCurricularCourse += enrolled.size();
-                            evaluated += getEvaluated(enrolled).intValue();
-                            approved += getApproved(enrolled).intValue();
-                        }
+                        final List<Enrolment> enroled = curricularCourse.getEnrolmentsByExecutionPeriod(executionPeriod);
+                        enrolledInCurricularCourse += enroled.size();
+                        evaluated = Enrolment.countEvaluated(enroled);
+                        approved = Enrolment.countApproved(enroled);
                     }
-                    infoSiteEvaluationStatistics.setEnrolled(new Integer(enrolledInCurricularCourse));
-                    infoSiteEvaluationStatistics.setEvaluated(new Integer(evaluated));
-                    infoSiteEvaluationStatistics.setApproved(new Integer(approved));
+                    infoSiteEvaluationStatistics.setEnrolled(Integer.valueOf(enrolledInCurricularCourse));
+                    infoSiteEvaluationStatistics.setEvaluated(Integer.valueOf(evaluated));
+                    infoSiteEvaluationStatistics.setApproved(Integer.valueOf(approved));
 
                     infoExecutionCourse.setInfoSiteEvaluationStatistics(infoSiteEvaluationStatistics);
                 }
-            }
-
-            private Integer getApproved(List enrolments) {
-                int approved = 0;
-                Iterator iter = enrolments.iterator();
-                while (iter.hasNext()) {
-                    Enrolment enrolment = (Enrolment) iter.next();
-                    EnrollmentState enrollmentState = enrolment.getEnrollmentState();
-                    if (enrollmentState.equals(EnrollmentState.APROVED)) {
-                        approved++;
-                    }
-                }
-                return new Integer(approved);
-            }
-
-            private Integer getEvaluated(List enrolments) {
-                int evaluated = 0;
-                Iterator iter = enrolments.iterator();
-                while (iter.hasNext()) {
-                    Enrolment enrolment = (Enrolment) iter.next();
-                    EnrollmentState enrollmentState = enrolment.getEnrollmentState();
-                    if (enrollmentState.equals(EnrollmentState.APROVED)
-                            || enrollmentState.equals(EnrollmentState.NOT_APROVED)) {
-                        evaluated++;
-                    }
-                }
-                return new Integer(evaluated);
             }
 
             private InfoExecutionCourse getOccupancyLevels(Object arg0) {
@@ -136,12 +106,12 @@ public class SearchExecutionCourses extends Service {
                 // FIXME: Find a better way to get the total
                 // capacity for
                 // each type of Shift
-                Integer theoreticalCapacity = new Integer(0);
-                Integer theoPraticalCapacity = new Integer(0);
-                Integer praticalCapacity = new Integer(0);
-                Integer labCapacity = new Integer(0);
-                Integer doubtsCapacity = new Integer(0);
-                Integer reserveCapacity = new Integer(0);
+                Integer theoreticalCapacity = Integer.valueOf(0);
+                Integer theoPraticalCapacity = Integer.valueOf(0);
+                Integer praticalCapacity = Integer.valueOf(0);
+                Integer labCapacity = Integer.valueOf(0);
+                Integer doubtsCapacity = Integer.valueOf(0);
+                Integer reserveCapacity = Integer.valueOf(0);
 
                 List shifts = executionCourse.getAssociatedShifts();
                 Iterator iterator = shifts.iterator();
@@ -149,21 +119,21 @@ public class SearchExecutionCourses extends Service {
                     Shift shift = (Shift) iterator.next();
 
                     if (shift.getTipo().equals(ShiftType.TEORICA)) {
-                        theoreticalCapacity = new Integer(theoreticalCapacity.intValue()
+                        theoreticalCapacity = Integer.valueOf(theoreticalCapacity.intValue()
                                 + shift.getLotacao().intValue());
                     } else if (shift.getTipo().equals(ShiftType.TEORICO_PRATICA)) {
-                        theoPraticalCapacity = new Integer(theoPraticalCapacity.intValue()
+                        theoPraticalCapacity = Integer.valueOf(theoPraticalCapacity.intValue()
                                 + shift.getLotacao().intValue());
                     } else if (shift.getTipo().equals(ShiftType.DUVIDAS)) {
-                        doubtsCapacity = new Integer(doubtsCapacity.intValue()
+                        doubtsCapacity = Integer.valueOf(doubtsCapacity.intValue()
                                 + shift.getLotacao().intValue());
                     } else if (shift.getTipo().equals(ShiftType.LABORATORIAL)) {
-                        labCapacity = new Integer(labCapacity.intValue() + shift.getLotacao().intValue());
+                        labCapacity = Integer.valueOf(labCapacity.intValue() + shift.getLotacao().intValue());
                     } else if (shift.getTipo().equals(ShiftType.PRATICA)) {
-                        praticalCapacity = new Integer(praticalCapacity.intValue()
+                        praticalCapacity = Integer.valueOf(praticalCapacity.intValue()
                                 + shift.getLotacao().intValue());
                     } else if (shift.getTipo().equals(ShiftType.RESERVA)) {
-                        reserveCapacity = new Integer(reserveCapacity.intValue()
+                        reserveCapacity = Integer.valueOf(reserveCapacity.intValue()
                                 + shift.getLotacao().intValue());
                     }
 
